--- a/BookshopApp/ClientApp/src/custom.css
+++ b/BookshopApp/ClientApp/src/custom.css
@@ -1,6 +1,11 @@
 /* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+a.card {
+    color: black;
+}
+
+a.card:hover{
+    color: black;
+    text-decoration: none;
 }
 
 code {
