Сarcass for Cart Page was created

--- a/BookshopApp/ClientApp/src/custom.css
+++ b/BookshopApp/ClientApp/src/custom.css
@@ -1,9 +1,9 @@
 /* Provide sufficient contrast against white background */
-a.card {
+.product_card, .carted_card {
     color: black;
 }
 
-a.card:hover{
+.product_card, .carted_card:hover {
     color: black;
     text-decoration: none;
 }
